Downgrade class file version